--- a/app/src/main/res/layout/chatting_item_msg_text_left.xml
+++ b/app/src/main/res/layout/chatting_item_msg_text_left.xml
@@ -56,7 +56,14 @@
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@id/iv_userhead"
             android:background="@drawable/chatfrom_bg" />
-
+        <ImageView
+            android:id="@+id/tv_photo_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/chatfrom_bg"
+            android:layout_toRightOf="@+id/iv_userhead"
+            android:layout_marginLeft="10dp"
+            android:visibility="gone"/>
         <TextView
             android:id="@+id/tv_time"
             android:layout_width="wrap_content"
@@ -70,15 +77,6 @@
             android:minHeight="50dp"
             android:textColor="#ff000000"
             android:textSize="15sp" />
-
-        <TextView
-            android:id="@+id/tv_username"
-            style="@style/chat_text_name_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@id/iv_userhead"
-            android:layout_toLeftOf="@id/tv_chatcontent" />
     </RelativeLayout>
 
 </LinearLayout>
