--- a/app/src/main/res/layout/chatting_item_msg_text_right.xml
+++ b/app/src/main/res/layout/chatting_item_msg_text_right.xml
@@ -66,6 +66,14 @@
 				android:lineSpacingExtra="2dp"
 				android:clickable="true"
 				android:focusable="true" />
+			<ImageView
+				android:id="@+id/tv_photo_message"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_toLeftOf="@+id/iv_userhead"
+				android:layout_marginRight="10dp"
+				android:background="@drawable/chatto_bg_normal"
+				android:visibility="gone"/>
 			<TextView
 	            android:id="@+id/tv_time"
 	            android:layout_toLeftOf="@id/recorder_length"
@@ -79,19 +87,6 @@
 	            android:lineSpacingExtra="2dp"
 	            android:clickable="true"
 	            android:focusable="true"/>
-
-
-	            <TextView
-	            android:id="@+id/tv_username"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:layout_below="@id/iv_userhead"
-	            android:layout_alignParentRight="true"
-	            android:layout_toRightOf="@id/recorder_length"
-	            android:textSize="15sp"
-	            android:gravity="center"
-	            android:textColor="#818181"/>
-
 	    </RelativeLayout>
 
 </LinearLayout>
